# PassMan

./: .gitignore  CMakeLists.txt  README.md  main.cpp  toolchain-windows.cmake
UI/: AddEditScreen.hpp  AddUserScreen.hpp  App.hpp  AppState.hpp  Dashboard.hpp  LoginScreen.hpp  SetMasterPasswordScreen.hpp
UML/: .$PassMan.drawio.bkp  Functionality.odt  PassMan.drawio
build-win/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
includes/: Data.h  MyStr.h  Organization.h  PassMan.h  Service.h  Token.h  User.h  Vector.h
src/: Data.cpp  MyStr.cpp  Organization.cpp  PassMan.cpp  Paths.hpp  Service.cpp  Token.cpp  User.cpp  crypto.hpp  main.cpp
